--- a/v1.0.0/03_Sources/mywebsite-front/.settings/org.eclipse.wst.common.component
+++ b/v1.0.0/03_Sources/mywebsite-front/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,7 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <dependent-module archiveName="springmvc-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/springmvc-core/springmvc-core">
+        <dependent-module archiveName="mywebsite-core-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/mywebsite-core/mywebsite-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/springmvc-front/target/classes"/>
