--- a/v1.0.0/03_Sources/mywebsite-front/.settings/org.eclipse.wst.common.component
+++ b/v1.0.0/03_Sources/mywebsite-front/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="FixedAssetManagementSystem">
+    <wb-module deploy-name="MyWebSite">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
@@ -8,6 +8,6 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <property name="java-output-path" value="/springmvc-front/target/classes"/>
-        <property name="context-root" value="FixedAssetManagementSystem"/>
+        <property name="context-root" value="MyWebSite"/>
     </wb-module>
 </project-modules>
