--- a/v1.0.0/03_Sources/mywebsite-backend/src/main/webapp/css/site/user/dataInputForm.css
+++ b/v1.0.0/03_Sources/mywebsite-backend/src/main/webapp/css/site/user/dataInputForm.css
@@ -8,12 +8,22 @@
 	border-radius:4px;
 	transition: all 0.2s ease-in-out 0s;
 }
+.selected_image_panel {
+	position:relative;
+	width:150px;
+	height:150px;
+	margin: 0 auto;
+	background-color:#333;
+	overflow : hidden;
+	border-radius:4px;
+	transition: all 0.2s ease-in-out 0s;	
+}
 .btn-imageUpload {
     position: absolute;
     right: 25px;
     top: 55px;
     display:none;
-    z-index: 99999;
+    z-index: 2;
 }
 .profileImagePanel:hover .btn-imageUpload{
 	display:block;
@@ -23,4 +33,8 @@
 }
 .smallPanel {
 	max-width : 800px;
+}
+.img-thumbnail {
+	padding : 0;
+	border : 0;
 }
