--- a/v1.0.0/03_Sources/mywebsite-backend/src/main/webapp/css/site/user/dataInputForm.css
+++ b/v1.0.0/03_Sources/mywebsite-backend/src/main/webapp/css/site/user/dataInputForm.css
@@ -16,7 +16,9 @@
 	background-color:#333;
 	overflow : hidden;
 	border-radius:4px;
-	transition: all 0.2s ease-in-out 0s;	
+}
+.selected_image_panel .img-thumbnail {
+	transition: none 0s ease 0s ;
 }
 .btn-imageUpload {
     position: absolute;
@@ -40,7 +42,7 @@
 }
 .cropArea {
 	width: 598px;
-	height: 300px;
+	height: 250px;
 	display:none;
 }
 /* Override Cropper's styles */
